--- a/app/assets/javascripts/discourse/app/templates/artists.hbs
+++ b/app/assets/javascripts/discourse/app/templates/artists.hbs
@@ -14,31 +14,28 @@
           {{this.model.artist.area}}
         </small>
       </div>
-      {{log this.wikipediaData}}
       {{#if this.wikipediaData}}
         <div class="wikipedia-extract">
           <div class="content">{{html-safe this.wikipediaData.content}}</div>
-          <a class="btn btn-link pull-right" href="{{this.wikipediaData.url}}" target="_blank" rel="noopener noreferrer">
+          <a class="btn btn-link pull-right" href={{this.wikipediaData.url}} target="_blank" rel="noopener noreferrer">
             Read on Wikipedia…
           </a>
         </div>
       {{/if}}
     </div>
-  </div>
-</div>
-{{log this.model.artist}}
-<div class="right-side">
-  <div class="entity-rels">
-    {{#if this.model.artist.rels}}
-      <h1>Links</h1>
-      {{#each-in this.model.artist.rels as |key value|}}
-        <p>{{key}} : {{value}}</p>
-      {{/each-in}}
-    {{/if}}
-    <OpenInMusicBrainzButton
-      @entityType="artist"
-      @entityMBID={{this.model.artist.mbid}}
-    />
+    <div class="right-side">
+      <div class="entity-rels">
+        {{#if this.model.artist.rels}}
+          {{#each-in this.model.artist.rels as |key value|}}
+            <RelIconLink @relName={{key}} @relValue={{value}}/>
+          {{/each-in}}
+        {{/if}}
+        <OpenInMusicBrainzButton
+          @entityType="artist"
+          @entityMBID={{this.model.artist.mbid}}
+        />
+      </div>
+    </div>
   </div>
   <div class="artist-genres tags">
     <h2>Genres</h2>
