--- a/app/assets/javascripts/discourse/app/components/rel-icon-link.hbs
+++ b/app/assets/javascripts/discourse/app/components/rel-icon-link.hbs
@@ -4,5 +4,5 @@
    className="btn btn-icon btn-link"
    target="_blank"
    rel="noopener noreferrer">
-  {{dIcon (this.iconName @relName @relValue)}}
+  {{d-icon (this.iconName @relName @relValue)}}
 </a>
