horizontal genres list

--- a/app/assets/javascripts/discourse/app/templates/artists.hbs
+++ b/app/assets/javascripts/discourse/app/templates/artists.hbs
@@ -40,7 +40,7 @@
   <div class="artist-genres tags">
     <h2>Genres</h2>
     {{#if this.formattedTags}}
-      <ul>
+      <ul class="horizontal-list">
         {{#each this.formattedTags as |tag|}}
           <li>
             {{tag.label}}
