--- a/app/assets/javascripts/discourse/app/templates/artists.hbs
+++ b/app/assets/javascripts/discourse/app/templates/artists.hbs
@@ -52,4 +52,6 @@
       <p>No genres available for this artist.</p>
     {{/if}}
   </div>
+  <div className="entity-page-content">
+  </div>
 </div>
